# Escape

./: .gitignore  LICENSE  _clang-format
CaveScreen/: platformio.ini
CaveScreen/src/: main.cpp
Common/msg/: .gitignore  connection.hpp  library.json  message_door_lock.hpp  message_format.hpp  message_ring_dispenser.hpp  message_targets.hpp  message_timer.hpp  msg.cpp  msg.hpp  wifi_config.hpp
Common/serial_in/: library.json  serial_in.cpp  serial_in.hpp
Controller/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
Controller/data/: imgui.ini  settings.txt  temps.csv
Controller/data/musics/: info.txt
Controller/data/orc/: info.txt
Controller/data/orc_death/: info.txt
Controller/data/orc_hurt/: info.txt
Controller/data/orc_mad/: info.txt
Controller/data/timer/: info.txt
Controller/source/: CMakeLists.txt  alias.hpp  audio.cpp  audio.hpp  client.hpp  console.cpp  console.hpp  console_commands.hpp  door_lock.cpp  door_lock.hpp  file_io.cpp  file_io.hpp  hashtable.hpp  imgui_config.hpp  input.hpp  main.cpp  print.hpp  random.hpp  ring_dispenser.cpp  ring_dispenser.hpp  scope_exit.hpp  serial_port.cpp  serial_port.hpp  server.cpp  server.hpp  settings.cpp  settings.hpp  targets.cpp  targets.hpp  time.hpp  timer.cpp  timer.hpp
Controller/source/glad/: glad.c  glad.h
DoorLock/: platformio.ini
DoorLock/src/: alias.hpp  main.cpp
Orc/: _clang-format  platformio.ini
Orc/src/: alias.hpp  main.cpp
RingDispenser/: platformio.ini
RingDispenser/src/: main.cpp
Targets/: platformio.ini
Targets/src/: main.cpp
Timer/: platformio.ini
Timer/data/: BlackChancery-36.vlw  FanjofeyAH-120.vlw
Timer/src/: main.cpp
WifiAP/: platformio.ini
WifiAP/src/: main.cpp
